--- a/report.Rmd
+++ b/report.Rmd
@@ -257,6 +257,8 @@ p + geom_bar(position="dodge", stat="identity")
 
 # Conclusión
 
+Después de realizar el estudio, destacaríamos lo siguiente:
+
 El hecho que la API de Twitter solo reporte 100 resultados en cada consulta a límitado mucho nuestro estudio teniendo que ajustar más nuestras búsquedas y esto ha podido repercutir en que haya tweets que no se contemplen en nuestro estudio, obteniendo así un resultado poco fiable.
 
-Si tuviéramos que contestar a nuestra pregunta **Son conscientes los ciudadanos de las vulnerabilidades y exploits que salen a diario?** según el resultado de cruzar los datos de ExploitDB y Twitter, podríamos decir que no, ya que, aún siendo el límite de 100 resultados no hemos obtenido en ningún caso más de 80 resultados (teniendo en cuenta los resultados de esta última semana).  
+Si tuviéramos que contestar a nuestra pregunta **Son conscientes los ciudadanos de las vulnerabilidades y exploits que salen a diario?** según el resultado de cruzar los datos de ExploitDB y Twitter, podríamos decir que no, ya que, aún estando límitada la búsqueda por 100 resultados no hemos obtenido en ningún caso más de 80 resultados (teniendo en cuenta los resultados obtenidos esta última semana).  
